# Phase4-chat

./: .env.example  .gitignore  README.md  docker-compose.yml  pnpm-workspace.yaml
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5f57755af9a0_add_user_profile_fields.py  dde2d9c0d1b9_add_title_to_conversations.py  phase3_init_add_conversation_tables.py
backend/src/: __init__.py  main.py
backend/src/ai/: __init__.py  agent.py  mcp_server.py  openai_client.py  smart_agent.py
backend/src/ai/tools/: task_tools.py
backend/src/api/: __init__.py  auth.py  chat.py  dependencies.py  tasks.py
backend/src/config/: settings.py
backend/src/core/: __init__.py  config.py  database.py  security.py
backend/src/mcp/: __init__.py  agent.py  tools.py
backend/src/middleware/: __init__.py  errors.py  logging.py
backend/src/models/: __init__.py  chat.py  task.py  user.py
backend/src/services/: __init__.py  auth.py  tasks.py
frontend/: .dockerignore  .env.local.example  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
helm/taskai/: Chart.yaml  values.yaml
scripts/: deploy-minikube.ps1  deploy-minikube.sh  verify-deployment.ps1  verify-deployment.sh
specs/001-todo-app-baseline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+71 files in other folders)
